--- a/portfolio.html
+++ b/portfolio.html
@@ -22,40 +22,27 @@
         </ul>
     </header>
     <main>
-        <!--link section-->
+        <!--button section-->
 <ul>
-<li><a href="">Все</a></li>
-<li><a href="">Веб-сайты</a></li>
-<li><a href="">Приложения</a></li>
-<li><a href="">Дизайн</a></li>
-<li><a href="">Маркетинг</a></li>
+<li><button type="button">Все</button></li>
+<li><button type="button">Веб-сайты</button></li>
+<li><button type="button">Приложения</button></li>
+<li><button type="button">Дизайн</button></li>
+<li><button type="button">Маркетинг</button></li>
 </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </main>
+ <!--project section-->
+<ul>
+<li><img src=".images/Group1.jpg" alt="Веб-сайт" width="370" height="404"></li>
+<li><img src=".images/project2.jpg" alt="Дизайн" width="370" height="404"></li>
+<li><img src=".images/project3.jpg" alt="Приложение" width="370" height="404"></li>
+<li><img src=".images/project4.jpg" alt="Маркетинг" width="370" height="404"></li>
+<li><img src=".images/project5.jpg" alt="Приложение" width="370" height="404"></li>
+<li><img src=".images/project6.jpg" alt="Веб-сайт" width="370" height="404"></li>
+<li><img src=".images/project7.jpg" alt="Дизайн" width="370" height="404" ></li>
+<li><img src=".images/project8.jpg" alt="Маркетинг" width="370" height="404"></li>
+<li><img src=".images/project9" alt="Приложение" width="370" height="404"></li>
+</ul>
+</main>
     <footer>
         <a href=""><span>Web</span>studio</a>
         <address>г. Киев, пр-т Леси Украинки, 26
