--- a/portfolio.html
+++ b/portfolio.html
@@ -32,15 +32,15 @@
 </ul>
  <!--project section-->
 <ul>
-<li><img src=".images/Group1.jpg" alt="Веб-сайт" width="370" height="404"></li>
-<li><img src=".images/project2.jpg" alt="Дизайн" width="370" height="404"></li>
-<li><img src=".images/project3.jpg" alt="Приложение" width="370" height="404"></li>
-<li><img src=".images/project4.jpg" alt="Маркетинг" width="370" height="404"></li>
-<li><img src=".images/project5.jpg" alt="Приложение" width="370" height="404"></li>
-<li><img src=".images/project6.jpg" alt="Веб-сайт" width="370" height="404"></li>
-<li><img src=".images/project7.jpg" alt="Дизайн" width="370" height="404" ></li>
-<li><img src=".images/project8.jpg" alt="Маркетинг" width="370" height="404"></li>
-<li><img src=".images/project9" alt="Приложение" width="370" height="404"></li>
+<li><img src="./images/Group1.jpg" alt="Веб-сайт" width="370" height="404"></li>
+<li><img src="./images/project2.jpg" alt="Дизайн" width="370" height="404"></li>
+<li><img src="./images/project3.jpg" alt="Приложение" width="370" height="404"></li>
+<li><img src="./images/project4.jpg" alt="Маркетинг" width="370" height="404"></li>
+<li><img src="./images/project5.jpg" alt="Приложение" width="370" height="404"></li>
+<li><img src="./images/project6.jpg" alt="Веб-сайт" width="370" height="404"></li>
+<li><img src="./images/project7.jpg" alt="Дизайн" width="370" height="404" ></li>
+<li><img src="./images/project8.jpg" alt="Маркетинг" width="370" height="404"></li>
+<li><img src="./images/project9.jpg" alt="Приложение" width="370" height="404"></li>
 </ul>
 </main>
     <footer>
