--- a/index.html
+++ b/index.html
@@ -5,49 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
       <nav>
         <a href=""><span>Web</span>studio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="nav-list">
+          <li><a href="./index.html" class="links">Студия</a></li>
+          <li><a href="./portfolio.html" class="links">Портфолио</a></li>
+          <li><a href="" class="links" >Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="cont-info">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+38096111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <!--hero section-->
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <button type="button">Заказать услугу</button>
+      <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+      <button type="button" class="order">Заказать услугу</button>
       </section>
-      <section>
+      <section class="section">
         <!--features-->
-        <ul>
+        <ul >
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="section-title">Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="section-title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="section-title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="section-title">Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
@@ -61,9 +62,9 @@
           <li><img src="./images/hw03.jpg" alt="стилизация" width="370" height="294" /></li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <!--our team-->
-        <h2>Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -72,22 +73,22 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="section-title">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/ОльгаРепина.jpg" alt="Frontend Developer" width="270" height="260" />
-            <h3>Ольга Репина</h3>
+            <h3 class="section-title">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/НиколайТарасов.jpg" alt="Marketing" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
+            <h3 class="section-title">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/МихаилЕрмаков.jpg" alt="UI Designer" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="section-title">Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -96,7 +97,7 @@
     <footer>
       <a href=""><span>Web</span>studio</a>
       <address>г. Киев, пр-т Леси Украинки, 26
-      <ul>
+      <ul class="cont-info">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
