--- a/portfolio.html
+++ b/portfolio.html
@@ -4,30 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>Портфоліо</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
-            <a href=""><span>Web</span>studio</a>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a class="logo-header" href=""><span>Web</span>studio</a>
+            <ul class="header list">
+                <li class="header-item"><a href="./index.html">Студія</a></li>
+                <li class="header-item"><a href="./portfolio.html">Портфоліо</a></li>
+                <li class="header-item"><a href="">Контакти</a></li>
             </ul>
         </nav>
-        <ul class="cont-info">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38096111111">+38 096 111 11 11</a></li>
+        <ul class="header-contacts">
+            <li class="contacts-info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contacts-info"><a href="tel:+38096111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <!--button section-->
 <ul>
-<li><button type="button">Все</button></li>
-<li><button type="button">Веб-сайты</button></li>
-<li><button type="button">Приложения</button></li>
+<li><button type="button">Усі</button></li>
+<li><button type="button">Веб-сайти</button></li>
+<li><button type="button">Додатки</button></li>
 <li><button type="button">Дизайн</button></li>
 <li><button type="button">Маркетинг</button></li>
 </ul>
@@ -45,11 +49,11 @@
 </ul>
 </main>
     <footer>
-        <a href=""><span>Web</span>studio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26
-            <ul class="cont-info">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <a class="logo-footer" href=""><span>Web</span>studio</a>
+        <address class="contacts-info">м. Київ, пр-т Лесі Українки, 26
+            <ul>
+                <li class="contacts-info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contacts-info"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
