--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
     <nav>
       <a class="logo-header" href=""><span>Web</span>studio</a>
       <ul class="header list">
-        <li class="header-item">Студія</li>
-        <li class="header-item">Портфоліо
-          <a href="./portfolio.html">portfolio.html</a>
-        </li>
+        <li class="header-item"><a href="./index.html">Студія</a></li>
+        <li class="header-item"><a href="./portfolio.html">Портфоліо</a></li>
         <li class="header-item">Контакти</li>
       </ul>
     </nav>
@@ -44,16 +42,16 @@
           <p class="features-descr">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li class="features-items">
-          <h2 class="features-title>ПУНКТУАЛЬНІСТЬ</h2>
-          <p class="features-descr">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <h2 class="features-title">ПУНКТУАЛЬНІСТЬ</h2>
+        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li class="features-items">
-          <h2 class="features-title>ПЛАНУВАННЯ</h2>
-          <p class="features-descr">Так само консультація з широким активом значною мірою зумовлює.</p>
+          <h2 class="features-title">ПЛАНУВАННЯ</h2>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li class="features-items">
-          <h2 class="features-title>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-          <p class="features-descr">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <h2 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
       </ul>
     </section>
@@ -61,9 +59,9 @@
       <!--what we do section-->
       <h2 class="secondary-title">Чим ми займаємося</h2>
       <ul class="works-list">
-        <li class="work-img"><img src="./goit-markup-hw-01/images/img(squoosh).jpg" alt="верстка" width="370" height="294"></li>
-        <li class="work-img"><img src="./goit-markup-hw-01/images/img2(squoosh).jpg" alt="оптимізація" width="370" height="294"></li>
-        <li class="work-img"><img src="./goit-markup-hw-01/images/img3(squoosh).jpg" alt="стилізація" width="370" height="294"></li>
+        <li class="work-img"><img src="./images/img(squoosh).jpg" alt="верстка" width="370" height="294"></li>
+        <li class="work-img"><img src="./images/img2(squoosh).jpg" alt="оптимізація" width="370" height="294"></li>
+        <li class="work-img"><img src="./images/img3(squoosh).jpg" alt="стилізація" width="370" height="294"></li>
       </ul>
     </section>
     <section>
@@ -71,25 +69,25 @@
       <h2 class="secondary-title">Наша команда</h2>
       <ul class="workers-list">
         <li class="workers-descr">
-          <img src="./goit-markup-hw-01/images/img (Ігор Дем'яненко)(squoosh).jpg" alt="Product Designer" width="270"
+          <img src="./images/img (Ігор Дем'яненко)(squoosh).jpg" alt="Product Designer" width="270"
             height="260">
           <h3 class="worker-name">Ігор Дем'яненко</h3>
           <p class="profession-descr">Product Designer</p>
         </li>
         <li class="workers-descr">
-          <img src="./goit-markup-hw-01/images/img (Ольга Рєпіна)(squoosh).jpg" alt="Frontend Developer" width="270"
+          <img src="./images/img (Ольга Рєпіна)(squoosh).jpg" alt="Frontend Developer" width="270"
             height="260">
           <h3 class="worker-name">Ольга Рєпіна</h3>
           <p class="profession-descr">Frontend Developer</p>
         </li>
         <li class="workers-descr">
-          <img src="./goit-markup-hw-01/images/img (Микола Тарасов)(squoosh).jpg" alt="Marketing" width="270"
+          <img src="./images/img (Микола Тарасов)(squoosh).jpg" alt="Marketing" width="270"
             height="260">
           <h3 class="worker-name">Микола Тарасов</h3>
           <p class="profession-descr">Marketing</p>
         </li>
         <li class="workers-descr">
-          <img src="./goit-markup-hw-01/images/img (Михайло Єрмаков)(squoosh).jpg" alt="UI Designer" width="270"
+          <img src="./images/img (Михайло Єрмаков)(squoosh).jpg" alt="UI Designer" width="270"
             height="260">
           <h3 class="worker-name">Михайло Єрмаков</h3>
           <p class="profession-descr">UI Designer</p>
