--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 <body>
   <header class="header">
     <nav>
-      <a class="logo-header" href=""><span>Web</span>studio</a>
+      <a class="logo" href=""><span class="logo-primary">Web</span>studio</a>
       <ul class="header list">
         <li class="header-item"><a href="./index.html">Студія</a></li>
         <li class="header-item"><a href="./portfolio.html">Портфоліо</a></li>
         <li class="header-item">Контакти</li>
       </ul>
     </nav>
-    <ul class="header-contacts">
-      <li class="contacts-info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li class="contacts-info"> +38 096 111 11 11</li>
+    <ul class="nav">
+      <li class="nav-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="nav-list"> +38 096 111 11 11</li>
     </ul>
   </header>
  <main>
 <!--hero section-->
-<section>
+<section class="hero">
     <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
     <button class="hero-btn">Замовити послугу</button>
 </section>
@@ -43,15 +43,15 @@
         </li>
         <li class="features-items">
           <h2 class="features-title">ПУНКТУАЛЬНІСТЬ</h2>
-        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        <p class="features-descr">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li class="features-items">
           <h2 class="features-title">ПЛАНУВАННЯ</h2>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <p class="features-descr">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li class="features-items">
           <h2 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <p class="features-descr">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
       </ul>
     </section>
@@ -72,37 +72,37 @@
           <img src="./images/img (Ігор Дем'яненко)(squoosh).jpg" alt="Product Designer" width="270"
             height="260">
           <h3 class="worker-name">Ігор Дем'яненко</h3>
-          <p class="profession-descr">Product Designer</p>
+          <p class="descr">Product Designer</p>
         </li>
         <li class="workers-descr">
           <img src="./images/img (Ольга Рєпіна)(squoosh).jpg" alt="Frontend Developer" width="270"
             height="260">
           <h3 class="worker-name">Ольга Рєпіна</h3>
-          <p class="profession-descr">Frontend Developer</p>
+          <p class="descr">Frontend Developer</p>
         </li>
         <li class="workers-descr">
           <img src="./images/img (Микола Тарасов)(squoosh).jpg" alt="Marketing" width="270"
             height="260">
           <h3 class="worker-name">Микола Тарасов</h3>
-          <p class="profession-descr">Marketing</p>
+          <p class="descr">Marketing</p>
         </li>
         <li class="workers-descr">
           <img src="./images/img (Михайло Єрмаков)(squoosh).jpg" alt="UI Designer" width="270"
             height="260">
           <h3 class="worker-name">Михайло Єрмаков</h3>
-          <p class="profession-descr">UI Designer</p>
+          <p class="descr">UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
   <footer class="footer">
-    <a class="logo-footer" href=""><span>Web</span>studio</a>
+    <a class="logo" href=""><span class="logo-secondary">Web</span>studio</a>
     <ul class="footer-list">
-      <li class="footer-contacts">
-        <address class="contacts-info">м. Київ, пр-т Лесі Українки, 26</address>
+      <li class="nav">
+        <address class="nav-list">м. Київ, пр-т Лесі Українки, 26</address>
       </li>
-      <li class="contacts-info">info@devstudio.com</li>
-      <li class="contacts-info">+38 096 111 11 11</li>
+      <li class="nav-list">info@devstudio.com</li>
+      <li class="nav-list">+38 096 111 11 11</li>
     </ul>
   </footer>
 </body>
