--- a/portfolio.html
+++ b/portfolio.html
@@ -14,16 +14,16 @@
 <body>
     <header class="header">
         <nav>
-            <a class="logo-header" href=""><span>Web</span>studio</a>
+        <a class="logo" href=""><span class="logo-primary">Web</span>studio</a>
             <ul class="header list">
                 <li class="header-item"><a href="./index.html">Студія</a></li>
                 <li class="header-item"><a href="./portfolio.html">Портфоліо</a></li>
                 <li class="header-item"><a href="">Контакти</a></li>
             </ul>
         </nav>
-        <ul class="header-contacts">
-            <li class="contacts-info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contacts-info"><a href="tel:+38096111111">+38 096 111 11 11</a></li>
+        <ul class="nav">
+            <li class="nav-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="nav-list"><a href="tel:+38096111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -36,24 +36,51 @@
 <li><button type="button">Маркетинг</button></li>
 </ul>
  <!--project section-->
-<ul>
-<li><img src="./images/Group1.jpg" alt="Веб-сайт" width="370" height="404"></li>
-<li><img src="./images/project2.jpg" alt="Дизайн" width="370" height="404"></li>
-<li><img src="./images/project3.jpg" alt="Приложение" width="370" height="404"></li>
-<li><img src="./images/project4.jpg" alt="Маркетинг" width="370" height="404"></li>
-<li><img src="./images/project5.jpg" alt="Приложение" width="370" height="404"></li>
-<li><img src="./images/project6.jpg" alt="Веб-сайт" width="370" height="404"></li>
-<li><img src="./images/project7.jpg" alt="Дизайн" width="370" height="404" ></li>
-<li><img src="./images/project8.jpg" alt="Маркетинг" width="370" height="404"></li>
-<li><img src="./images/project9.jpg" alt="Приложение" width="370" height="404"></li>
+<ul class="projects-descr">
+<li><img src="./images/project1pro.jpg" alt="Веб-сайт" width="370" height="404">
+<h3 class="projects-name">Технокряк</h3>
+<p class="descr">Веб-сайт</p>
+</li>
+<li><img src="./images/project2pro.jpg" alt="Дизайн" width="370" height="404">
+<h3 class="projects-name">Постер New Orlean vs Golden Star</h3>
+<p class="descr">Дизайн</p>
+</li>
+<li><img src="./images/project3pro.jpg" alt="Додаток" width="370" height="404">
+<h3 class="projects-name">Ресторан Seafood</h3>
+<p class="descr">Додаток</p>
+</li>
+<li><img src="./images/project4pro.jpg" alt="Маркетинг" width="370" height="404">
+<h3 class="projects-name">Проєкт Prime</h3>
+<p class="descr">Маркетинг</p>
+</li>
+<li><img src="./images/project5pro.jpg" alt="Додаток" width="370" height="404">
+<h3 class="projects-name">Проєкт Boxes</h3>
+<p class="descr">Додаток</p>
+</li>
+<li><img src="./images/project6pro.jpg" alt="Веб-сайт" width="370" height="404">
+<h3 class="projects-name">Inspiration has no Borders</h3>
+<p class="descr">Веб-сайт</p>
+</li>
+<li><img src="./images/project7pro.jpg" alt="Дизайн" width="370" height="404" >
+<h3 class="projects-name">Видання Limited Edition</h3>
+<p class="descr">Дизайн</p>
+</li>
+<li><img src="./images/project8pro.jpg" alt="Маркетинг" width="370" height="404">
+<h3 class="projects-name">Проєкт LAB</h3>
+<p class="descr">Маркетинг</p>
+</li>
+<li><img src="./images/project9pro.jpg" alt="Додаток" width="370" height="404">
+<h3 class="projects-name">Growing Business</h3>
+<p class="descr">Додаток</p>
+</li>
 </ul>
 </main>
     <footer>
-        <a class="logo-footer" href=""><span>Web</span>studio</a>
-        <address class="contacts-info">м. Київ, пр-т Лесі Українки, 26
-            <ul>
-                <li class="contacts-info"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contacts-info"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <a class="logo" href=""><span class="logo-secondary">Web</span>studio</a>
+        <address class="nav-list">м. Київ, пр-т Лесі Українки, 26
+            <ul class="nav">
+                <li class="nav-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="nav-list"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
