--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
   rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
-
 <body>
   <header class="header">
     <nav>
       <a class="logo" href=""><span class="logo-primary">Web</span>studio</a>
-      <ul class="header list">
-        <li class="header-item"><a href="./index.html">Студія</a></li>
-        <li class="header-item"><a href="./portfolio.html">Портфоліо</a></li>
+      <ul class="header-list list">
+        <li class="header-item"><a class="header-link link" href="./index.html">Студія</a></li>
+        <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
         <li class="header-item">Контакти</li>
       </ul>
     </nav>
-    <ul class="nav">
-      <li class="nav-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <ul class="nav list">
+      <li class="nav-list link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li class="nav-list"> +38 096 111 11 11</li>
     </ul>
   </header>
@@ -58,46 +57,46 @@
     <section>
       <!--what we do section-->
       <h2 class="secondary-title">Чим ми займаємося</h2>
-      <ul class="works-list">
+      <ul class="works-list list">
         <li class="work-img"><img src="./images/img(squoosh).jpg" alt="верстка" width="370" height="294"></li>
         <li class="work-img"><img src="./images/img2(squoosh).jpg" alt="оптимізація" width="370" height="294"></li>
         <li class="work-img"><img src="./images/img3(squoosh).jpg" alt="стилізація" width="370" height="294"></li>
       </ul>
     </section>
-    <section>
+    <section class="team">
       <!--our team section-->
       <h2 class="secondary-title">Наша команда</h2>
-      <ul class="workers-list">
-        <li class="workers-descr">
+      <ul class="team-list list">
+        <li class="team-descr">
           <img src="./images/img (Ігор Дем'яненко)(squoosh).jpg" alt="Product Designer" width="270"
             height="260">
-          <h3 class="worker-name">Ігор Дем'яненко</h3>
-          <p class="descr">Product Designer</p>
+          <h3 class="team-member-name">Ігор Дем'яненко</h3>
+          <p class="team-member-descr">Product Designer</p>
         </li>
-        <li class="workers-descr">
+        <li class="team-descr">
           <img src="./images/img (Ольга Рєпіна)(squoosh).jpg" alt="Frontend Developer" width="270"
             height="260">
-          <h3 class="worker-name">Ольга Рєпіна</h3>
-          <p class="descr">Frontend Developer</p>
+          <h3 class="team-member-name">Ольга Рєпіна</h3>
+          <p class="worker-descr">Frontend Developer</p>
         </li>
-        <li class="workers-descr">
+        <li class="team-descr">
           <img src="./images/img (Микола Тарасов)(squoosh).jpg" alt="Marketing" width="270"
             height="260">
-          <h3 class="worker-name">Микола Тарасов</h3>
-          <p class="descr">Marketing</p>
+          <h3 class="team-member-name">Микола Тарасов</h3>
+          <p class="team-member-descr">Marketing</p>
         </li>
-        <li class="workers-descr">
+        <li class="team-descr">
           <img src="./images/img (Михайло Єрмаков)(squoosh).jpg" alt="UI Designer" width="270"
             height="260">
-          <h3 class="worker-name">Михайло Єрмаков</h3>
-          <p class="descr">UI Designer</p>
+          <h3 class="team-member-name">Михайло Єрмаков</h3>
+          <p class="team-member-descr">UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
   <footer class="footer">
     <a class="logo" href=""><span class="logo-secondary">Web</span>studio</a>
-    <ul class="footer-list">
+    <ul class="footer-list list">
       <li class="nav">
         <address class="nav-list">м. Київ, пр-т Лесі Українки, 26</address>
       </li>
