--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header class="header">
     <nav>
-      <a class="logo" href=""><span class="logo-primary">Web</span>studio</a>
+      <a class="header-logo link" href=""><span class="logo-primary">Web</span>Studio</a>
       <ul class="header-list list">
         <li class="header-item"><a class="header-link link" href="./index.html">Студія</a></li>
         <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
@@ -23,8 +23,8 @@
       </ul>
     </nav>
     <ul class="nav list">
-      <li class="nav-list link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li class="nav-list"> +38 096 111 11 11</li>
+      <li class="nav-list"><a class="nav-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="nav-list link"> +38 096 111 11 11</li>
     </ul>
   </header>
  <main>
@@ -95,7 +95,7 @@
     </section>
   </main>
   <footer class="footer">
-    <a class="logo" href=""><span class="logo-secondary">Web</span>studio</a>
+    <a class="footer-logo link" href=""><span class="logo-secondary">Web</span>Studio</a>
     <ul class="footer-list list">
       <li class="nav">
         <address class="nav-list">м. Київ, пр-т Лесі Українки, 26</address>
